# model-manager

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  analyze_models.py  fuzzy_analyze.py  fuzzy_analyze_2_3.py  pyproject.toml
.claude/plans/: add-scores-sort.md
.context/: lessons.md
docs/: config-guide.md
scripts/: manage_aliases.py  sync_aa_scores.py
src/model_manager/: __init__.py  __main__.py  cli.py  config.py  main.py
src/model_manager/domain/: advisor.py  aliases.py  auth.py  discovery.py  models.py  providers.py  scores.py  storage.py
tests/: conftest.py  test_aliases.py  test_cli.py  test_config.py  test_scores.py
